--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ src/pshmodule/__pycache__/
 src/pshmodule/selenium/__pycache__/
 src/pshmodule/processing/__pycache__
 src/pshmodule/db/__pycache__
+src/pshmodule/utils/__pycache__
 test/__pycache__/
 test/db_config.py
